# giskard-oss

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  ISSUES.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  pyrightconfig.json  renovate.json
.claude/: settings.local.json
.cursor/rules/: documentation.mdc  guidelines.mdc  python.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: giskard_bug_template.yaml
.github/workflows/: build-python.yml  ci.yml  integration-tests.yml  lock-deps.yml  pr-labeler.yml  release.yml  reset-safe-for-build-label.yml  zizmor.yml
giskard/: __init__.py
giskard_pypi_shim/: __init__.py
libs/giskard-agents/: README.md  pyproject.toml
libs/giskard-agents/.cursor/rules/: generator-adapter.mdc
libs/giskard-agents/src/giskard/agents/: __init__.py  chat.py  config.py  context.py  pipeline.py  rate_limiter.py  workflow.py
libs/giskard-agents/src/giskard/agents/embeddings/: __init__.py  base.py  litellm_embedding_model.py
libs/giskard-agents/src/giskard/agents/errors/: __init__.py  serializable.py  workflow_errors.py
libs/giskard-agents/src/giskard/agents/generators/: __init__.py  _types.py  base.py  giskard_llm_generator.py  litellm_generator.py  middleware.py  mixins.py  rate_limiting.py  retries.py  retry.py
libs/giskard-agents/src/giskard/agents/templates/: __init__.py  environment.py  message.py  prompts_manager.py
libs/giskard-agents/src/giskard/agents/tools/: __init__.py  _docstring_parser.py  tool.py
libs/giskard-agents/tests/: conftest.py  test_chat.py  test_embedding_model.py  test_generator.py  test_generator_backends.py  test_generator_retry.py  test_litellm_generator.py  test_rate_limiter.py  test_serialization.py  test_template_namespaces.py  test_templates.py  test_tools.py  test_tools_context.py  test_workflow.py  test_workflow_error_handling.py  test_workflow_output_parsing.py  test_workflow_steps.py
libs/giskard-agents/tests/data/prompts/: invalid.j2  multi_message.j2  simple.j2
libs/giskard-checks/: CODEMAP.md  README.md  pyproject.toml
libs/giskard-checks/.cursor/rules/: 02-project.mdc  03-development.mdc  10-python.mdc
libs/giskard-checks/src/giskard/checks/: __init__.py  _telemetry_props.py  settings.py
libs/giskard-checks/src/giskard/checks/builtin/: __init__.py  base.py  comparison.py  composition.py  conformity.py  fn.py  groundedness.py  json_valid.py  nlp_metrics.py  rego_policy.py  semantic_similarity.py  string_matching.py  text_matching.py
libs/giskard-checks/src/giskard/checks/core/: __init__.py  check.py  extraction.py  input_generator.py  interaction.py  mixin.py  protocols.py  result.py  scenario.py  testcase.py  trace.py  types.py
libs/giskard-checks/src/giskard/checks/core/interaction/: __init__.py  base.py  interact.py  interaction.py  trace.py
libs/giskard-checks/src/giskard/checks/generators/: base.py  user.py
libs/giskard-checks/src/giskard/checks/interaction/: __init__.py
libs/giskard-checks/src/giskard/checks/judges/: __init__.py  answer_relevance.py  base.py  conformity.py  contradiction.py  groundedness.py  judge.py  toxicity.py
libs/giskard-checks/src/giskard/checks/prompts/generators/: user_simulator.j2
libs/giskard-checks/src/giskard/checks/prompts/judges/: answer_relevance.j2  conformity.j2  contradiction.j2  groundedness.j2  toxicity.j2
libs/giskard-checks/src/giskard/checks/scenarios/: __init__.py  builder.py  runner.py  suite.py
libs/giskard-checks/src/giskard/checks/testing/: __init__.py  runner.py  spy.py
libs/giskard-checks/src/giskard/checks/utils/: generator.py  injectable.py  normalization.py  optional_deps.py  parameter_injection.py  value_provider.py
libs/giskard-checks/tests/: conftest.py  test_public_import_surface.py  test_smoke.py
libs/giskard-checks/tests/builtin/: test_answer_relevance.py  test_base.py  test_comparison.py  test_composition.py  test_conformity.py  test_contradiction.py  test_equals.py  test_fn.py  test_groundedness.py  test_json_valid.py  test_judge.py  test_nlp_metrics.py  test_regex_matching.py  test_rego_policy.py  test_semantic_similarity.py  test_string_matching.py  test_toxicity.py
libs/giskard-checks/tests/core/: test_extraction.py  test_jsonpath_enforcement.py  test_missing_serialization.py  test_mixin.py  test_scenario.py  test_settings.py  test_suite.py  test_trace_type_inference.py
libs/giskard-checks/tests/generators/: test_user.py
libs/giskard-checks/tests/integration/: conftest.py  test_stateful.py  test_stateless.py
libs/giskard-checks/tests/scenarios/: test_testcase.py
libs/giskard-checks/tests/trace/: test_interaction.py  test_interaction_spec.py
libs/giskard-checks/tests/utils/: test_normalization.py
libs/giskard-core/: README.md  (+1 more)
libs/giskard-scan/: pyproject.toml
libs/giskard-scan/src/giskard/scan/: __init__.py  catalog.py  quality.py  registry.py  types.py  vulnerability.py
libs/giskard-scan/src/giskard/scan/generators/: __init__.py  adversarial.py  base.py  crescendo.py  goat.py  huggingface.py  knowledge_base.py
libs/giskard-scan/src/giskard/scan/generators/knowledge_base/: __init__.py  base.py  hallucination.py  multi_topic.py  out_of_scope.py  split_questions.py  sycophancy.py
libs/giskard-scan/src/giskard/scan/prompts/generate_suite/: out_of_scope_candidate.j2  out_of_scope_validation.j2
libs/giskard-scan/src/giskard/scan/prompts/judges/: goat_eval.j2
libs/giskard-scan/src/giskard/scan/prompts/scenarios/: goat_attack.j2  knowledge_base_multi_topic.j2  knowledge_base_out_of_scope.j2  knowledge_base_split_question.j2
libs/giskard-scan/src/giskard/scan/utils/: knowledge_base.py
libs/giskard-scan/tests/: test_generators_base.py  test_knowledge_base.py  test_public_api.py  test_public_import_surface.py  test_quality.py  test_vulnerability.py
libs/giskard-scan/tests/generators/: test_adversarial.py  test_catalog.py  test_crescendo.py  test_goat.py  test_knowledge_base.py  test_prompt_injection.py  test_registry.py  test_sycophancy.py
(+88 files in other folders)
