[project]
name = "giskard"
readme = "README.md"
license = { text = "Apache Software License 2.0" }
version = "3.0.0b1"
description = "The testing framework dedicated to ML models, from tabular to LLMs"
authors = [{ name = "Giskard AI", email = "hello@giskard.ai" }]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = ["giskard-checks>=1.0.2b4,<2"]

requires-python = ">=3.12"

[project.optional-dependencies]
# Native LLM providers
openai = ["giskard-llm[openai]>=1.0.0b4,<2"]
google = ["giskard-llm[google]>=1.0.0b4,<2"]
anthropic = ["giskard-llm[anthropic]>=1.0.0b4,<2"]
azure = ["giskard-llm[azure]>=1.0.0b4,<2"]

# External LLM providers
litellm = ["giskard-agents[litellm]>=1.0.2b4,<2"]

# Optional checks dependencies
regorus = ["giskard-checks[regorus]>=1.0.2b4,<2"]

# Optional giskard libs
scan = ["giskard-scan>=1.0.0b2,<2"]

# Aggregated packages
all-llms = ["giskard-llm[all]>=1.0.0b4,<2"] # Install all native LLM providers
all-checks = ["giskard-checks[all]>=1.0.2b4,<2"] # Install all optional checks dependencies
full = ["giskard[all-llms,all-checks,scan,litellm]"]

[project.urls]
"Homepage" = "https://giskard.ai"
"Source Code" = "https://github.com/Giskard-AI/giskard"
"Bug Tracker" = "https://github.com/Giskard-AI/giskard/issues"
"Documentation" = "https://docs.giskard.ai/"
"Discord" = "https://discord.gg/ABvfpbu69R"
"Linkedin" = "https://www.linkedin.com/company/giskard-ai"
"Mastodon" = "https://fosstodon.org/@Giskard"
"Twitter" = "https://twitter.com/giskard_ai"

[tool.uv.workspace]
members = [
    "libs/*",
]

[tool.uv.sources]
giskard-core = { workspace = true }
giskard-llm = { workspace = true }
giskard-agents = { workspace = true }
giskard-checks = { workspace = true }
giskard-scan = { workspace = true }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["giskard_pypi_shim"]

[tool.hatch.build.targets.sdist]
only-include = ["giskard_pypi_shim", "README.md", "pyproject.toml", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "functional: tests that require external API calls (deselect with '-m \"not functional\"')",
    "openai: tests requiring the openai provider SDK",
    "google: tests requiring the google-genai provider SDK",
    "anthropic: tests requiring the anthropic provider SDK",
    "azure: tests requiring the openai SDK (Azure OpenAI)",
    "azure_ai: tests requiring the openai SDK (Azure AI Foundry)",
    "no_providers: tests that run without any provider SDK installed",
]

[dependency-groups]
test = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
]
dev = [
    { include-group = "test" },
    "giskard[full]",
    "ipykernel==7.3.0",
    "pip-audit==2.10.1",
    "pylint-pydantic==0.4.1",
]
