[project]
name = "giskard-agents"
version = "1.0.0a1"
description = " A lightweight library that orchestrates LLM completions and agents in parallel workflows "
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Giskard R&D", email = "rnd@giskard.ai" }]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.72.0,<2",
    "pydantic>=2.11.0,<3",
    "griffe>=1.7.0,<2",
    "typing-extensions>=4.14.0,<5",
    "jinja2>=3.1.6,<4",
    "logfire-api>=3.22.0,<5",
    "tenacity>=9.1.0,<10",
    "giskard-core>=1.0.0a1",
    "numpy>=2.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tools should be installed via `uv tool install`:
# - ruff: uv tool install ruff
# - vermin: uv tool install vermin
# - pre-commit: uv tool install pre-commit --with pre-commit-uv
#
# Note: pytest and pip-audit stay in dev deps because they need access to project dependencies


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "functional: marks tests that depend on external APIs (e.g., Gemini, OpenAI)",
]

[tool.ruff.lint.isort.sections]
"my_packages" = ["giskard"]

[tool.hatch.build.targets.wheel]
packages = ["src/giskard"]


[tool.ruff.lint]
# I: [isort](https://docs.astral.sh/ruff/rules/#isort-i)
# F401: [unused-import](https://docs.astral.sh/ruff/rules/unused-import/)
select = ["I", "F401"]
