[project]
name = "giskard-checks"
version = "1.0.0a1"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "jsonpath-ng>=1.7.0,<2",
    "pydantic>=2.12,<3",
    "giskard-agents>=1.0.0a1",
    "jinja2>=3.1.6,<4",
    "giskard-core>=1.0.0a1",
    "numpy>=2.4.1,<3",
    "rich>=14.2.0,<15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: integration tests that are skipped unless --run-integration is provided",
]

[tool.ruff.lint]
select = ["E", "W", "I", "F"]
ignore = ["E501"]

[tool.ruff.lint.isort.sections]
"my_packages" = ["giskard"]

[tool.pyright]
failOnWarnings = false
typeCheckingMode = "recommended"
reportImportCycles = "warning"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giskard"]

[tool.hatch.build.targets.sdist]
include = [
  "src/giskard/checks",
  "README.md",
  "pyproject.toml",
]
